--- a/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1.csproj
@@ -20,6 +20,8 @@
 
     <ItemGroup>
       <Folder Include="Migrations" />
+      <Folder Include="wwwroot\img\logo\test@gmail.com" />
+      <Folder Include="wwwroot\img\profilPic\Dispatcher@gmail.com" />
     </ItemGroup>
 
 </Project>
