--- a/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1.csproj
@@ -21,6 +21,7 @@
     <ItemGroup>
       <Folder Include="Migrations" />
       <Folder Include="wwwroot\img\logo\test@gmail.com" />
+      <Folder Include="wwwroot\img\profilPic\Chauffeur2@gmail.com" />
       <Folder Include="wwwroot\img\profilPic\Dispatcher@gmail.com" />
     </ItemGroup>
 
