--- a/WebApplication1/appsettings.json
+++ b/WebApplication1/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=192.168.128.13;Database=in19b1217;User Id=in19b1217;Password=6622;"
+    "DefaultConnection": ""
   },
   "Logging": {
     "LogLevel": {
